<resources xmlns:tools="http://schemas.android.com/tools">

    // App

    <string name="app_name">PDF Creator</string>
    <string name="app_permissions">You must grant \"Access Storage Permission\" to save pdf files. After that you should
        completely close the app or restart the phone. If you don\'t permit the storage access but want to use the
        screenshot function at a later time, you can grant the permission later. Please open then: system settings - apps -
        weather. In the permissions section you can grant the \"write storage permission\".</string>
    <string name="app_portrait">Portrait</string>
    <string name="app_landscape">Landscape</string>


    // App titles

    <string name="create_image">Image to PDF</string>
    <string name="create_text">Text to PDF</string>
    <string name="add_image">+ image</string>
    <string name="add_text">+ text | …</string>
    <string name="app_title_edit">Edit image</string>
    <string name="app_title_crop">Crop image</string>


    // Snackbar // Toasts

    <string name="toast_yes">OK</string>
    <string name="toast_cancel">Cancel</string>
    <string name="toast_successfully">PDF successfully created.</string>
    <string name="toast_wait">Images successfully created. Open folder?</string>
    <string name="toast_successfully_not">An error occurred.</string>
    <string name="toast_open">Open?</string>
    <string name="toast_install_pdf">Please install a PDF reader.</string>
    <string name="toast_install_folder">Please install a file manager.</string>
    <string name="toast_noImage">Please choose an image.</string>
    <string name="toast_noPDF">Please choose a PDF file.</string>
    <string name="toast_noText">Please enter text.</string>
    <string name="toast_savedImage">Please wait. Saving image.</string>


    // Main menu

    <string name="action_share">Share PDF</string>
    <string name="action_open">Open PDF</string>
    <string name="action_folder">Open app folder</string>
    <string name="action_settings">Settings</string>
    <string name="action_save">Save</string>
    <string name="action_share_with">Share PDF with:</string>
    <string name="action_share_Text">In the attachment you can find the PDF file:</string>


    // Fragments

    <string name="app_title">Please enter title:</string>
    <string name="app_title_date">Date</string>
    <string name="app_hint" tools:ignore="TypographyEllipsis">Whatever you want ...</string>


    // Text fragment

    <string name="add_text_delete">Delete pages</string>
    <string name="add_text_delete_hint">Which pages do you want to keep?</string>
    <string name="add_text_hint_enterText">Write or paste text</string>
    <string name="add_text_PW">Enter new user password</string>
    <string name="add_text_PW_hint">Needed to open the encrypted PDF file.</string>


    // Image fragment

    <string name="goal_gallery">Choose from gallery</string>
    <string name="goal_camera">Take photo</string>
    <string name="goal_cancel">Cancel</string>


    // Editor

    <string name="filter_1">Contrast</string>
    <string name="filter_2">Hue</string>
    <string name="filter_3">Brightness</string>
    <string name="filter_4">Sharpness</string>
    <string name="filter_5">Saturation</string>

    <string name="filter_6">Exposure</string>
    <string name="filter_7">Highlight Shadow</string>
    <string name="filter_8">White Balance</string>
    <string name="filter_9">Color Balance</string>
    <string name="filter_10">Levels Min (Mid Adjust)</string>


    // Settings

    <string name="settings_prefApp">About the app</string>
    <string name="settings_prefDir">App directory</string>
    <string name="settings_prefEnc">Encryption</string>
    <string name="settings_prefData">Document data</string>

    <string name="pref_license">License</string>
    <string name="pref_license_summary">The app is completely open source and licensed under GPL3.</string>

    <string name="pref_lib">Libraries</string>
    <string name="pref_lib_summary">The following open source libraries ar used in the app.</string>

    <string name="pref_imageQuality">Image quality</string>
    <string name="pref_imageQuality_summary">Set the image quality. Higher quality results in (much) bigger PDF sizes.</string>

    <string name="pref_backup">Backup</string>
    <string name="pref_backup_summary">Do you want to backup pdf files before manipulating, e.g. deleting or adding pages?</string>

    <string name="pref_folderDef">Default directory</string>
    <string name="pref_folderDef_summary">Use the default directory: \"/Android/data/de.baumann.pdf/\".</string>

    <string name="pref_folder">Custom directory</string>
    <string name="pref_folder_summary">Change the default app directory, where new PDF files and backups will be saved. Enter the path
        to your desired folder on your sdcard. The path must begin and end with \"/\" like \"/Download/PDF/\".
        If the desired directory does not exist, it will be generated automatically.</string>
    <string name="pref_folder_hint">/Download/PDF/…</string>

    <string name="pref_pwUSER">User password</string>
    <string name="pref_pwUSER_summary">Set the user password for PDF files. It is used to open the PDF file after
        encryption. Copy and printing is still allowed after decryption. It can be changed by long pressing the encryption icon
        in the \"+text | …\" tab.</string>

    <string name="pref_pwOWNER">Owner password</string>
    <string name="pref_pwOWNER_summary">Set the owner password for encrypted PDF files. If somebody wants to edit the file
        later he needs this password.</string>

    <string name="pref_metaAuthor">Author</string>
    <string name="pref_metaAuthor_summary">Who is the author of the PDF? You can enter for example your name:
        \"Max Mustermann\". Can be changed by long pressing the tag icon in the \"+text | …\" tab.</string>

    <string name="pref_metaCreator">Creator</string>
    <string name="pref_metaCreator_summary">Who created the PDF? Perhaps this app: \"PDF Creator using iText\"?  Can be changed
        by long pressing the tag icon in the \"+text | …\" tab.</string>

    <string name="pref_metaKeywords">Keywords</string>
    <string name="pref_metaKeywords_summary">Set keywords for your PDFs, separated by commas: \"Metadata, iText, PDF\".  Can
        be changed by long pressing the tag icon in the \"+text | …\" tab.</string>

    <string name="pref_metaSubject">Subject</string>
    <string name="pref_metaSubject_summary">Subject of your PDF file: \"This example shows how to add metadata\".  Can be changed
        by long pressing the tag icon in the \"+text | …\" tab.</string>

    <string name="pref_rotate">Portrait</string>
    <string name="pref_rotate_summary">Use portrait format for PDF pages. You can easily switch between portrait and landscape by
        clicking the displayed pdf name at the bottom of the screen. The actual format is also shown.</string>

    <string-array name="listArrayImage">
        <item>High (100%)</item>
        <item>Normal (80%)</item>
        <item>Low (60%)</item>
    </string-array>

    <string-array name="listValuesImage">
        <item>100</item>
        <item>80</item>
        <item>60</item>
    </string-array>


    //License Dialog

    <string name="about_title" translatable="false">Copyright © 2016  by Gaukler Faun</string>
    <string name="about_text" translatable="false">
        &lt;i>For more informations visit the project site on github:&lt;br>
        https://github.com/scoute-dich/PDFCreator&lt;/i>&lt;br>&lt;br>

        This program is free software: you can redistribute it and/or modify
        it under the terms of the GNU General Public License as published by
        the Free Software Foundation, either version 3 of the License, or
        (at your option) any later version.

        This program is distributed in the hope that it will be useful,
        but WITHOUT ANY WARRANTY; without even the implied warranty of
        MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
        GNU General Public License for more details.

        You should have received a copy of the GNU General Public License
        along with this program.  If not, see http://www.gnu.org/licenses.
    </string>


    //Library Dialog

    <string name="lib_text" translatable="false">
        &lt;b>Android-Image-Cropper&lt;/b>&lt;br>
        https://github.com/ArthurHub/Android-Image-Cropper&lt;br>&lt;br>

        &lt;b>Android PDFView&lt;/b>&lt;br>
        https://github.com/JoanZapata/android-pdfview&lt;br>&lt;br>

        &lt;b>GPUImage for Android&lt;/b>&lt;br>
        https://github.com/CyberAgent/android-gpuimage&lt;br>&lt;br>

        &lt;b>iText&lt;/b>&lt;br>
        https://github.com/itext/itextpdf
    </string>


    //Image cropper

    <string name="app_title_2">Saving image …</string>
    <string name="crop_image_menu_rotate_left">Rotate left</string>
    <string name="crop_image_menu_rotate_right">Rotate right</string>

</resources>