<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:title="@string/action_settings">

        <ListPreference
            android:title="@string/pref_imageQuality"
            android:summary="@string/pref_imageQuality_summary"
            android:key="imageQuality"
            android:defaultValue="80"
            android:entries="@array/listArrayImage"
            android:entryValues="@array/listValuesImage" />

        <CheckBoxPreference
            android:title="@string/pref_backup"
            android:summary="@string/pref_backup_summary"
            android:key="backup"
            android:defaultValue="true" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/settings_prefDir">

        <CheckBoxPreference
            android:title="@string/pref_folderDef"
            android:summary="@string/pref_folderDef_summary"
            android:key="folderDef"
            android:defaultValue="true" />

        <EditTextPreference
            android:title="@string/pref_folder"
            android:summary="@string/pref_folder_summary"
            android:hint="@string/pref_folder_hint"
            android:key="folder" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/settings_prefApp">

        <Preference
            android:title="@string/pref_license"
            android:summary="@string/pref_license_summary"
            android:key="license" />

        <Preference
            android:title="@string/pref_lib"
            android:summary="@string/pref_lib_summary"
            android:key="lib" />

    </PreferenceCategory>

</PreferenceScreen>