<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto" >
    <item
        android:id="@+id/crop_image_menu_rotate_right"
        android:icon="@drawable/rotate_right"
        android:title="@string/crop_image_menu_rotate_right"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/crop_image_menu_rotate_left"
        android:icon="@drawable/rotate_left"
        android:title="@string/crop_image_menu_rotate_left"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_folder"
        android:orderInCategory="100"
        android:title="@string/action_folder"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />

</menu>
