<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto" >
    <item
        android:id="@+id/filter"
        android:icon="@drawable/auto_fix"
        android:title="@string/action_save"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/save"
        android:icon="@drawable/content_save"
        android:title="@string/action_save"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_folder"
        android:orderInCategory="100"
        android:title="@string/action_folder"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />

</menu>
